--- a/main.html
+++ b/main.html
@@ -8,56 +8,38 @@
 
 <body>
     <!-- the entire body must be written by student -->
-    <table id="groceryTable" border="1">
-        <tr>
-            <th>Item</th>
-            <th>Price</th>
-        </tr>
-        <tr class="item">
-            <td>Apples</td>
-            <td class="prices">2.50</td>
-        </tr>
-        <tr class="item">
-            <td>Bananas</td>
-            <td class="prices">1.20</td>
-        </tr>
-        <tr class="item">
-            <td>Milk</td>
-            <td class="prices">3.00</td>
-        </tr>
-    </table>
+    <table style="width: 100%">
+    <caption>
+      Monthly savings
+    </caption>
+    <tr>
+      <th>Item</th>
+      <th>Prices in Rs</th>
+    </tr>
+    <tr>
+      <td class="item">Tea</td>
+      <td class="price">50</td>
+    </tr>
+    <tr>
+      <td class="item">Coffee</td>
+      <td class="price">70</td>
+    </tr>
+    <tr>
+      <td class="item">Biscuits</td>
+      <td class="price">100</td>
+    </tr>
+    <tr>
+      <td class="item">Rice</td>
+      <td class="price">130</td>
+    </tr>
+    <tr>
+      <td class="item">Milk</td>
+      <td class="price">50</td>
+    </tr>
+  </table>
+    <script type="text/javascript" src="./script.js">
+</script>
 
-    <button onclick="calculateTotal()">Calculate Total</button>
-
-    <script>
-        function calculateTotal() {
-            let priceElements = document.querySelectorAll(".prices");
-            let total = 0;
-
-            priceElements.forEach(price => {
-                total += parseFloat(price.textContent);
-            });
-
-            // Remove existing total row if it exists
-            let existingTotalRow = document.getElementById("totalRow");
-            if (existingTotalRow) {
-                existingTotalRow.remove();
-            }
-
-            // Create a new row for the total price
-            let table = document.getElementById("groceryTable");
-            let totalRow = document.createElement("tr");
-            totalRow.id = "totalRow";  // Assign ID to prevent duplicates
-
-            let totalCell = document.createElement("td");
-            totalCell.colSpan = 2; // Span across both columns
-            totalCell.style.fontWeight = "bold";
-            totalCell.textContent = "Total Price: $" + total.toFixed(2);
-
-            totalRow.appendChild(totalCell);
-            table.appendChild(totalRow);
-        }
-    </script>
 </body>
 
 </html>
