--- a/main.html
+++ b/main.html
@@ -7,36 +7,25 @@
 </head>
 
 <body>
+	 <table id="grocery-table" border="1">
+        <tr>
+            <th>Item</th>
+            <th>Price</th>
+        </tr>
+        <tr class="item">
+            <td>Apples</td>
+            <td class="prices">2.5</td>
+        </tr>
+        <tr class="item">
+            <td>Bananas</td>
+            <td class="prices">1.8</td>
+        </tr>
+        <tr class="item">
+            <td>Oranges</td>
+            <td class="prices">3.2</td>
+        </tr>
+    </table>
     <!-- the entire body must be written by student -->
-    <table style="width: 100%">
-    <caption>
-      Monthly savings
-    </caption>
-    <tr>
-      <th>Item</th>
-      <th>Prices in Rs</th>
-    </tr>
-    <tr>
-      <td class="item">Tea</td>
-      <td class="price">50</td>
-    </tr>
-    <tr>
-      <td class="item">Coffee</td>
-      <td class="price">70</td>
-    </tr>
-    <tr>
-      <td class="item">Biscuits</td>
-      <td class="price">100</td>
-    </tr>
-    <tr>
-      <td class="item">Rice</td>
-      <td class="price">130</td>
-    </tr>
-    <tr>
-      <td class="item">Milk</td>
-      <td class="price">50</td>
-    </tr>
-  </table>
     <script type="text/javascript" src="./script.js">
 </script>
 
