--- a/main.html
+++ b/main.html
@@ -1,15 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Monthly Savings</title>
-</head>
-<body>
+GROFERs : 
 
-  <table style="width: 100%">
-    <caption>Monthly Savings</caption>
+
+<!DOCTYPE html>
+
+<html>
+
+<head>
+
+</head>
+
+<body>
+    <!-- the entire body must be written by student -->
+    <table style="width: 100%">
+    <caption>
+      Monthly savings
+    </caption>
     <tr>
       <th>Item</th>
       <th>Prices in Rs</th>
@@ -35,39 +40,9 @@
       <td class="price">50</td>
     </tr>
   </table>
-
-  <button id="get-sum-btn">Get Total Price</button>
-
-  <script>
-    const getSumBtn = document.getElementById("get-sum-btn");
-
-    const getSum = () => {
-      const prices = document.querySelectorAll(".price");
-      let total = 0;
-
-      prices.forEach(price => {
-        total += Number(price.textContent);
-      });
-
-      let totalRow = document.getElementById("total-row");
-      if (!totalRow) {
-        totalRow = document.createElement("tr");
-        totalRow.id = "total-row";
-
-        const totalCell = document.createElement("td");
-        totalCell.setAttribute("colspan", "2");
-        totalCell.id = "ans";
-
-        totalRow.appendChild(totalCell);
-        document.querySelector("table").appendChild(totalRow);
-      }
-
-      document.getElementById("ans").textContent = Total Price: Rs ${total};
-    };
-
-    getSumBtn.addEventListener("click", getSum);
-  </script>
+    <script type="text/javascript" src="./script.js">
+</script>
 
 </body>
+
 </html>
- 
